解决8和17之间的兼容问题